--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Grayson Martin</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact – Grayson Martin</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Grayson Martin</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container nav">
+      <div class="brand"><a href="index.html">Grayson Martin</a></div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html" aria-current="page">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <h2>Contact Me</h2>
-    <p>contact info</p>
+  <main class="container">
+    <section class="panel" style="padding:22px">
+      <h2>Contact</h2>
+      <p class="inline-icons">
+        <a href="mailto:youremail@utk.edu">Email</a>
+        <a href="https://www.linkedin.com/in/your-handle/">LinkedIn</a>
+        <a href="https://github.com/graysonmartin-web">GitHub</a>
+        <a href="Grayson_Martin_Resume.pdf">Resume (PDF)</a>
+      </p>
+    </section>
   </main>
 
   <footer>
-    <p>© 2025 Grayson Martin</p>
+    <div class="container">© 2025 Grayson Martin • CFD Portfolio</div>
   </footer>
 </body>
 </html>
-
