--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
   <footer>
     <div class="container">© 2025 Grayson Martin • CFD Portfolio</div>
   </footer>
+<script src="script.js"></script>
 </body>
 </html>
