--- a/contact.html
+++ b/contact.html
@@ -34,5 +34,7 @@
   <footer>
     <div class="container">© 2025 Grayson Martin • CFD Portfolio</div>
   </footer>
+<script src="script.js"></script>
 </body>
 </html>
+
